--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     color: #F2F2F2;
  }
 .dark-mode .line .timeline-content h2{
-    background-color:#444444 ;
+    background-color:#1A1A1A;
 }
 
 .dark-mode span , .dark-mode .social-icons a , .dark-mode .social-icons a:hover{
@@ -322,7 +322,8 @@ section{
     display: flex;
     justify-content: space-between;
     background: #E6E6FA;
-    color: black;
+    color: #1A1A1A;
+    cursor: pointer;
 
 }
 
@@ -363,7 +364,7 @@ section{
     border-color: #BA55D3;
     transform: scale(1.02);
     background-color: white;
-    color: black;
+    color: #1A1A1A;
 }
 
 
@@ -445,25 +446,25 @@ section{
 }
 
 .btn {
-    background: linear-gradient(45deg, #E6E6FA, #BA55D3); /* Dégradé */
+    background: linear-gradient(45deg, #c9a8d2, #BA55D3); 
     color: white;
     padding: 12px 20px;
     border: none;
-    border-radius: 25px; /* Coins arrondis prononcés */
+    border-radius: 25px;
     font-size: 16px;
     cursor: pointer;
-    position: relative; /* Position pour l'effet d'ombre */
-    overflow: hidden; /* Pour gérer l'ombre */
+    position: relative; 
+    overflow: hidden;
     transition: transform 0.2s ease;
 }
 
 .btn:hover {
-    transform: translateY(-2px); /* Déplacement léger vers le haut */
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Ombre portée */
+    transform: translateY(-2px); 
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); 
 }
 
 .btn:active {
-    transform: translateY(2px); /* Déplacement vers le bas au clic */
+    transform: translateY(4px); 
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -480,16 +481,16 @@ section{
 .footer {
     display: flex;
     align-items: center; /* Aligne les éléments verticalement */
-    position: fixed; /* Fixe la barre en bas de la page */
-    bottom: 0; /* Positionne la barre au bas */
+    position: fixed; 
+    bottom: 0; 
     left: 0;
     right: 0;
 }
 
 .line {
     flex: 1;
-    height: 1.5px; /* Épaisseur de la ligne */
-    background: #0a0a0a; /* Couleur de la ligne */
+    height: 1.5px; 
+    background: #444444; 
     
 }
 .social-icons a{
@@ -510,7 +511,7 @@ section{
     background: #BA55D3;
     color: white;
     transform: scale(1.3)translateY(-5px);
-    box-shadow: 0 0 5px #BA55D1, 0 0 25px #BA55D2, 0 0 50px #c761e0, 0 0 200px #BA55D5;
+    box-shadow: 0 0 5px #e0c0e7, 0 0 25px #b98bc4, 0 0 50px #b477c3, 0 0 200px #ad60c3;
     transition: 0.5s ease;
 }
    
